--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "react-dom": "^16.5.2"
   },
   "devDependencies": {
-    "@storybook/react": "^3.4.11",
-    "babel-core": "^6.26.3",
-    "babel-preset-react": "^6.24.1",
-    "babel-runtime": "^6.26.0",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.3.1",
+    "@emotion/core": "0.x.x",
+    "@storybook/react": "^4.0.0",
+    "babel-loader": "^8.0.0",
     "eslint": "^5.6.1",
-    "prettier": "^1.14.3"
+    "prettier": "^1.14.3",
+    "webpack": "^4.29.6"
   }
 }
