--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "storybook-branches",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "author": "Pascal",
   "license": "MIT",
+  "private": true,
   "bin": {
     "storybook-branches": "cli.js"
   },
