--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "argparse": "^2.0.1",
+    "cross-spawn": "^7.0.3",
     "for-each-branch": "^0.2.6",
     "fs-extra": "^9.1.0",
     "winston": "^3.3.3"
